# TrinaxAI

./: .dockerignore  .env.example  .gitignore  ANALYSIS.md  CHANGELOG.es.md  CHANGELOG.md  CODE_OF_CONDUCT.es.md  CODE_OF_CONDUCT.md  CONTRIBUTING.es.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.es.md  README.md  ROADMAP.es.md  ROADMAP.md  SECURITY.es.md  SECURITY.md  SUPPORT.es.md  SUPPORT.md  TRADEMARK.es.md  TRADEMARK.md  backup.sh  compose.yaml  config.py  continue-config.yaml  index.py  install.ps1  install.sh  install_ollama_16gb_profile.sh  pyproject.toml  query.py  rag_api.py  requirements-dev.txt  requirements-rerank.txt  requirements.txt  service_manager.py  setup_trinaxai.sh  shutdown_ai.sh  (+10 more)
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
app/: __init__.py  api_runtime.py  main.py
app/evaluation/: __init__.py  rag_metrics.py
app/generation/: __init__.py  classifier.py  presets.py  prompts.py  scoring.py  spec.py  validate.py
app/routes/: __init__.py  agent.py  app_state.py  attachments.py  chat.py  collections.py  documents.py  health.py  memory.py  pairing.py  research.py  sources.py  stats.py  system.py  voice.py  watcher.py  web_search_settings.py
app/schemas/: __init__.py  api.py
app/security/: __init__.py  admin_auth.py  device_auth.py  rate_limit.py
app/services/: __init__.py  agent_service.py  app_state_service.py  attachment_service.py  collection_service.py  document_service.py  engine_state.py  health_service.py  memory_service.py  rag_service.py  research_service.py  runtime_context.py  shared_runtime.py  sources_service.py  system_service.py  usage_service.py  voice_service.py  watcher_service.py  web_search_service.py  web_search_settings_service.py
chat-pwa/: README.es.md  README.md  index.html  inference-lock.test.ts  inference-lock.ts  package-lock.json  package.json  playwright.config.ts  security-headers.ts  tailwind.config.js  tsconfig.json  vite-security.ts  vite.config.ts  vite.security.test.ts  vitest.config.ts
chat-pwa/e2e/: pwa.spec.ts  shell.spec.ts  visual-states.spec.ts  voice-lifecycle.spec.ts
chat-pwa/public/: offline.html  site.webmanifest
chat-pwa/scripts/: check-bundle-budget.mjs
chat-pwa/src/: App.background.test.tsx  App.tsx  index.css  main.tsx  vite-env.d.ts
chat-pwa/src/components/: AgentInterface.test.tsx  AgentInterface.tsx  Background.test.tsx  Background.tsx  ChatInterface.tsx  ChatSidebar.tsx  ConfirmModal.test.tsx  ConfirmModal.tsx  DevicePairingCard.test.tsx  DevicePairingCard.tsx  DeviceSetupChoice.tsx  Docs.tsx  ErrorBoundary.tsx  FolderPicker.tsx  Intro.tsx  KnowledgeBrowser.tsx  MemoryPanel.test.tsx  MemoryPanel.tsx  OnboardingWizard.test.tsx  OnboardingWizard.tsx  PermissionNotice.tsx  PwaUpdater.tsx  RecentIndexes.tsx  Settings.tsx  Sources.test.tsx  Sources.tsx  StatsPanel.tsx  StatusDots.tsx  Toast.tsx  ToggleSwitch.tsx  WatcherCard.tsx  WebSearchSettings.test.tsx  WebSearchSettings.tsx
chat-pwa/src/hooks/: useAgentHistory.ts  useChatHistory.ts  useChatScroll.ts  useDialogAccessibility.test.tsx  useDialogAccessibility.ts  useStreamChat.test.ts  useStreamChat.ts  useVoiceMode.ts  useWaitingSound.ts
chat-pwa/src/i18n/: I18nContext.test.tsx  I18nContext.tsx  translations.ts
docs/: ABOUT.es.md  ABOUT.md  API_REFERENCE.es.md  API_REFERENCE.md  ARCHITECTURE.es.md  ARCHITECTURE.md  AUDIT_GENERATION_PIPELINE.md  CLI_REFERENCE.es.md  CLI_REFERENCE.md  CONFIGURATION.es.md  CONFIGURATION.md  DEVELOPER_GUIDE.es.md  DEVELOPER_GUIDE.md  ENVIRONMENT_VARIABLES.md  INSTALL_LINUX.es.md  INSTALL_LINUX.md  INSTALL_MACOS.es.md  INSTALL_MACOS.md  INSTALL_WINDOWS.es.md  INSTALL_WINDOWS.md  MODEL_BENCHMARK.md  PUBLIC_RELEASE.es.md  PUBLIC_RELEASE.md  README.es.md  README.md  RESULTS_BEFORE_AFTER.md
docs/es/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  SUPPORT.md  TRADEMARK.md
scripts/: auto_update.py  evaluate_rag.py  harden_systemd_units.sh  public_readiness.py  run_windows_pytest.py  with_index_lock.py
tests/: test_agent_engine.py  test_agent_service.py  test_agent_tools.py  test_app_architecture.py  test_app_state_sync.py  test_auto_update.py  test_cli_branding.py  test_cli_chat.py  test_cli_commands.py  test_cli_pairing.py  test_cli_parser.py  test_cli_paths.py  test_cli_processes.py  test_cli_router.py  test_cli_runtime.py  test_cli_tls.py  test_cli_ui.py  test_config_profiles.py  test_core_config.py  test_device_pairing.py  test_doctor_drift.py  test_document_extraction.py  test_engine_state_lru.py  test_environment_docs.py  test_generation_pipeline.py  test_index_backend_integrity.py  test_index_helpers.py  test_index_integrity.py  test_index_progress.py  test_index_real_integration.py  test_large_pdf_jobs.py  test_memory_real_integration.py  test_memory_service.py  test_model_routing.py  test_observability.py  test_packaging_manifest.py  test_public_readiness.py  test_rag_api_reset_and_sources.py  test_rag_metrics.py  test_rag_privacy_and_cancel.py  (+12 more)
tests/fixtures/: rag_golden.json
trinaxai_cli/: __init__.py  __main__.py  app.py  branding.py  client.py  config.py  processes.py  prompts.py  router.py  runtime.py  session.py  ui.py
trinaxai_cli/agent/: __init__.py  engine.py  extract.py  tools.py
trinaxai_cli/commands/: __init__.py  _lifecycle.py  _system.py  agent.py  ask.py  browse.py  chat.py  chat_slash.py  chat_state.py  collections.py  config.py  doctor.py  export.py  help.py  index.py  mcp.py  memory.py  models.py  obsidian.py  pair.py  research.py  restart.py  start.py  status.py  stop.py  uninstall.py  update.py  version.py  watch.py
(+57 files in other folders)
