[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trinaxai"
version = "1.0.0"
description = "TrinaxAI local-first AI assistant CLI and local RAG tooling."
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
authors = [
  { name = "TrinaxCode" }
]
dependencies = [
  "httpx>=0.28.1",
  "rich>=13.0"
]

[project.scripts]
trinaxai = "trinaxai_cli.app:main"

[tool.setuptools]
packages = ["trinaxai_cli", "trinaxai_cli.commands"]
py-modules = ["trinaxai_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = [
  ".venv",
  "chat-pwa/node_modules",
  "chat-pwa/dist",
  "storage",
  "local_sources",
  "backups",
]

[tool.ruff.lint]
select = ["E9", "F"]
